--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
         <nav class="navigation">
             <a href="{% url 'home' %}"><button class="btn btn-info">Home</button></a>
             <a href="{% url 'add-product' %}"><button class="btn btn-info">Add products</button></a>
-            <a href=""><button class="btn btn-info">view products</button></a>
+            <a href="{% url 'products' %}"><button class="btn btn-info">view products</button></a>
             <a href="{% url 'register' %}"><button class="btn btn-info">register</button></a>
             <a href="{% url 'login' %}"><button class="btn btn-info"> login</button></a>
             <a href="{% url 'logout' %}"><button class="btn btn-info">logout</button></a>
