--- a/templates/login.html
+++ b/templates/login.html
@@ -8,11 +8,11 @@
         <div class="row">
             <div class="col-3"></div>
             <div class="col-6">
-                 <h1>Register Here</h1>
+                 <h1>Login now</h1>
                     <form action="" method="post">
                         {% csrf_token %}
                         <fieldset>
-                            <legend>Login now</legend>
+                            <legend>Login in here</legend>
                               {{ form|crispy}}
                         </fieldset>
                         <div class="form-group">
