--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
             <a href="{% url 'products' %}"><button class="btn btn-info">view products</button></a>
             <a href="{% url 'register' %}"><button class="btn btn-info">register</button></a>
             <a href="{% url 'login' %}"><button class="btn btn-info"> login</button></a>
-            <a href="{% url 'logout' %}"><button class="btn btn-info">logout</button></a>
+            <a href="{% url 'logout' %}"><button class="btn btn-danger">logout</button></a>
         </nav>
 
     </div>
