--- a/templates/update-product.html
+++ b/templates/update-product.html
@@ -9,7 +9,8 @@
                 <div class="col-3"></div>
                 <div class="col-6">
                     <h3 class="text-dark text-center">Update product</h3>
-                    <form " method="POST">
+                    <form
+                            method="POST">
                         {% csrf_token %}
                         <div class="form group">
                             <input  value="{{ product.prod_name }}" class="form-control" type="text" name="jina" placeholder="enter name"required>
